Regression: Crash drag-dropping collection from outliner to ID property #98715

Closed
opened 2022-06-09 09:52:44 +02:00 by Sergey Sharybin · 7 comments

System Information
Operating system: macOS-12.4-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon PRO W6800X OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.54

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 18:08, hash: 173a15bcda, also broken in 3.1
Worked: 2.93.9

Caused by 3e32a68f38

Short description of error

Drag-dropping collection from outliner to an ID property defined as Python type and which already has a value in it will lead to crash.

Exact steps for others to reproduce the error

  • Open attached file
  • Drag MyCollection from outliner
  • Drop it into the value field of the prop1 property of the scene

IDProperty.blend

Stack trace:

(lldb) bt
* thread #1, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x0)
  * frame #0: 0x0000000000000000
    frame #1: 0x00000001029fedea Blender`ui_textedit_begin(C=0x00006000033052c8, but=0x0000000131a3f808, data=0x000000015fa2b048) at interface_handlers.c:3484:23
    frame #2: 0x00000001029fe2b3 Blender`button_activate_state(C=0x00006000033052c8, but=0x0000000131a3f808, state=BUTTON_STATE_TEXT_EDITING) at interface_handlers.c:8333:5
    frame #3: 0x00000001029fdfc6 Blender`ui_but_set_string_interactive(C=0x00006000033052c8, but=0x0000000131a3f808, value="MyCollection") at interface_handlers.c:2966:3
    frame #4: 0x0000000102a3f8af Blender`drop_name_invoke(C=0x00006000033052c8, op=0x0000600003505978, UNUSED_event=0x0000600003279d48) at interface_ops.c:1951:5
    frame #5: 0x0000000100f8fcfa Blender`wm_operator_invoke(C=0x00006000033052c8, ot=0x0000600003bd55e8, event=0x0000600003279d48, properties=0x0000600000264a88, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.cc:1389:16
    frame #6: 0x0000000100f8f9b9 Blender`wm_operator_call_internal(C=0x00006000033052c8, ot=0x0000600003bd55e8, properties=0x0000600000264a88, reports=0x0000000000000000, context=WM_OP_INVOKE_DEFAULT, poll_only=false, event=0x0000600003279d48) at wm_event_system.cc:1630:16
    frame #7: 0x0000000100f95507 Blender`wm_handlers_do_intern(C=0x00006000033052c8, win=0x0000000136524158, event=0x0000600003279d48, handlers=0x000000013652b410) at wm_event_system.cc:3187:35
    frame #8: 0x0000000100f93cc0 Blender`wm_handlers_do(C=0x00006000033052c8, event=0x0000600003279d48, handlers=0x000000013652b410) at wm_event_system.cc:3285:16
    frame #9: 0x0000000100f98a5e Blender`wm_event_do_region_handlers(C=0x00006000033052c8, event=0x0000600003279d48, region=0x000000013652b2d8) at wm_event_system.cc:3705:10
    frame #10: 0x0000000100f94dc1 Blender`wm_event_do_handlers_area_regions(C=0x00006000033052c8, event=0x0000600003279d48, area=0x0000600003880848) at wm_event_system.cc:3735:10
    frame #11: 0x0000000100f934a5 Blender`::wm_event_do_handlers(C=0x00006000033052c8) at wm_event_system.cc:3932:23
    frame #12: 0x0000000100f848d7 Blender`WM_main(C=0x00006000033052c8) at wm.c:623:5
    frame #13: 0x000000010017dbe3 Blender`main(argc=1, argv=0x00007ff7bfeff7e0) at creator.c:547:5
    frame #14: 0x000000012eba951e dyld`start + 462
**System Information** Operating system: macOS-12.4-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon PRO W6800X OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.54 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 18:08, hash: `173a15bcda`, also broken in 3.1 Worked: 2.93.9 Caused by 3e32a68f38 **Short description of error** Drag-dropping collection from outliner to an ID property defined as Python type and which already has a value in it will lead to crash. **Exact steps for others to reproduce the error** - Open attached file - Drag MyCollection from outliner - Drop it into the value field of the `prop1` property of the scene [IDProperty.blend](https://archive.blender.org/developer/F13141216/IDProperty.blend) Stack trace: ``` (lldb) bt * thread #1, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x0) * frame #0: 0x0000000000000000 frame #1: 0x00000001029fedea Blender`ui_textedit_begin(C=0x00006000033052c8, but=0x0000000131a3f808, data=0x000000015fa2b048) at interface_handlers.c:3484:23 frame #2: 0x00000001029fe2b3 Blender`button_activate_state(C=0x00006000033052c8, but=0x0000000131a3f808, state=BUTTON_STATE_TEXT_EDITING) at interface_handlers.c:8333:5 frame #3: 0x00000001029fdfc6 Blender`ui_but_set_string_interactive(C=0x00006000033052c8, but=0x0000000131a3f808, value="MyCollection") at interface_handlers.c:2966:3 frame #4: 0x0000000102a3f8af Blender`drop_name_invoke(C=0x00006000033052c8, op=0x0000600003505978, UNUSED_event=0x0000600003279d48) at interface_ops.c:1951:5 frame #5: 0x0000000100f8fcfa Blender`wm_operator_invoke(C=0x00006000033052c8, ot=0x0000600003bd55e8, event=0x0000600003279d48, properties=0x0000600000264a88, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.cc:1389:16 frame #6: 0x0000000100f8f9b9 Blender`wm_operator_call_internal(C=0x00006000033052c8, ot=0x0000600003bd55e8, properties=0x0000600000264a88, reports=0x0000000000000000, context=WM_OP_INVOKE_DEFAULT, poll_only=false, event=0x0000600003279d48) at wm_event_system.cc:1630:16 frame #7: 0x0000000100f95507 Blender`wm_handlers_do_intern(C=0x00006000033052c8, win=0x0000000136524158, event=0x0000600003279d48, handlers=0x000000013652b410) at wm_event_system.cc:3187:35 frame #8: 0x0000000100f93cc0 Blender`wm_handlers_do(C=0x00006000033052c8, event=0x0000600003279d48, handlers=0x000000013652b410) at wm_event_system.cc:3285:16 frame #9: 0x0000000100f98a5e Blender`wm_event_do_region_handlers(C=0x00006000033052c8, event=0x0000600003279d48, region=0x000000013652b2d8) at wm_event_system.cc:3705:10 frame #10: 0x0000000100f94dc1 Blender`wm_event_do_handlers_area_regions(C=0x00006000033052c8, event=0x0000600003279d48, area=0x0000600003880848) at wm_event_system.cc:3735:10 frame #11: 0x0000000100f934a5 Blender`::wm_event_do_handlers(C=0x00006000033052c8) at wm_event_system.cc:3932:23 frame #12: 0x0000000100f848d7 Blender`WM_main(C=0x00006000033052c8) at wm.c:623:5 frame #13: 0x000000010017dbe3 Blender`main(argc=1, argv=0x00007ff7bfeff7e0) at creator.c:547:5 frame #14: 0x000000012eba951e dyld`start + 462 ```
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

Caused by 3e32a68f38

CC @JulianEisel: seems like UI_but_func_search_set hasnt been done for that button?
Setting to High prio since it is a regression (even though a bit dated...)

Caused by 3e32a68f38 CC @JulianEisel: seems like `UI_but_func_search_set` hasnt been done for that button? Setting to High prio since it is a regression (even though a bit dated...)
Philipp Oeser changed title from Crash drag-dropping collection from outliner to ID property to Regression: Crash drag-dropping collection from outliner to ID property 2022-06-09 11:46:17 +02:00

This issue was referenced by 589a8104c3

This issue was referenced by 589a8104c34b163ab03f8499440ea7f5d4f20193

This issue was referenced by 4475c38c5c

This issue was referenced by 4475c38c5c9a0e1c5bb48d6fec07cbf58d98abcd
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2022-06-14 11:57:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98715
No description provided.